Apply background-color to scrollbar corner to prevent white square

--- a/symphony/assets/css/src/symphony.scrollbars.less
+++ b/symphony/assets/css/src/symphony.scrollbars.less
@@ -26,6 +26,10 @@ table[role="directory"] {
 		background-color: var(--scrollbar-background-color);
 		height: var(--scrollbar-height);
 		width: var(--scrollbar-width);
+
+		&-corner {
+			background-color: var(--scrollbar-background-color);
+		}
 	}
 
 	&:hover {
